# alkimia_arduino

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
alkimia_sw/: accelerometer_adxl335.cpp  accelerometer_adxl335.h  alkimia_sw.ino  constants.h  motor_controller.cpp  motor_controller.h  potentiometer_v_divider.cpp  potentiometer_v_divider.h
alkimia_sw/scilab/: motor_maxon_trajectory.sce
firmware/: CMakeLists.txt
firmware/include/: constants.h  potentiometer_v_divider.h
firmware/src/: accelerometer_adxl335.cpp  alkimia_sw.ino  potentiometer_v_divider.cpp  single_fin.cpp
launch/: single_fin.launch
scilab/: potentiometer.sce
